Layout - Fix: Updating header to fix chrome vertical align bug + removing whitespace

--- a/assets/_sass/_layout.sass
+++ b/assets/_sass/_layout.sass
@@ -60,14 +60,13 @@ header.banner
   // padding: 0 0 0 220px
   img
     display: none
-  ul
+  nav
     display: inline
-    // +inline-block
-    li
-      display: inline
-      // +inline-block
   ul.nav
     +float-right
+    vertical-align: top
+    li
+      display: inline
 
 aside.aside
   display: none
